start aboutus-page + added section hero + section history

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "slick-carousel": "^1.8.1"
   },
   "dependencies": {
+    "@fancyapps/ui": "^4.0.31",
     "jquery-form-styler": "^2.0.2",
     "sass": "^1.56.1",
     "wowjs": "^1.1.3"
